[package]
name = "img_hash_linker"
version = "1.1.0"
edition = "2024"
license = "MIT"
authors = ["Taylor Hoffmann <taylor@hotay.dev>"]
repository = "https://github.com/TaylorHo/img-hash-linker"
description = "A tool for opening links from images using perceptual hashing"
keywords = ["image", "hash", "perceptual-hash", "image-processing"]
categories = ["algorithms", "command-line-utilities", "encoding", "parsing"]

[dependencies]
image = "0.25.6"
fast_image_resize = { version = "5.1.4", features = ["image"] }
csv = "1.3.1"
open = "5.3.2"
url = "2.5.4"
